Update and rename 2020-06-03-project01.md to 2019-07-01-project01.md

--- a/project/_posts/2019-07-01-project01.md
+++ b/project/_posts/2019-07-01-project01.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: Machine-Learned Kinetic Facade
+title: Machine-Learned <br/> Kinetic Facade
 subtitle: Design and Construction of AI-enabled Responsive Building Facade
 cover-img: /assets/img/path.jpg
-tags: [Kinetic Facade, Built Work]
+tags: [Kinetic Facade, Built Work, Grasshopper, 3D printing]
 comments: true
 ---
 
